--- a/charts/lighthouse/templates/controller/serviceaccount.yaml
+++ b/charts/lighthouse/templates/controller/serviceaccount.yaml
@@ -1,7 +1,7 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if (eq (include "lighthouse.controller.enabled" .) "true") -}}
+{{- if eq .Values.controller.enabled true -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
