--- a/charts/lighthouse/templates/controller/tls-secret.yaml
+++ b/charts/lighthouse/templates/controller/tls-secret.yaml
@@ -1,17 +1,8 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingress.enabled true) (eq .Values.server.ingress.tls.enabled true) -}}
-{{- if or
-    (and
-      (not (empty .Values.server.ingress.tls.crt))
-      (not (empty .Values.server.ingress.tls.key))
-    )
-    (and
-      (not (empty .Values.global.ingress.tls.crt))
-      (not (empty .Values.global.ingress.tls.key))
-     )
-}}
+{{- if and (eq .Values.controller.enabled true) (eq .Values.ingress.enabled true) (eq .Values.ingress.tls.enabled true) -}}
+{{- if and (not (empty .Values.ingress.tls.crt)) (not (empty .Values.ingress.tls.key)) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -34,17 +25,8 @@ data:
 {{- end }}
 {{- end }}
 
-{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingressGrpc.enabled true) (eq .Values.server.ingressGrpc.tls.enabled true) (eq .Values.server.ingressGrpc.tls.useIngressTls false) -}}
-{{- if or
-    (and
-      (not (empty .Values.server.ingressGrpc.tls.crt))
-      (not (empty .Values.server.ingressGrpc.tls.key))
-    )
-    (and
-      (not (empty .Values.global.ingressGrpc.tls.crt))
-      (not (empty .Values.global.ingressGrpc.tls.key))
-     )
-}}
+{{- if and (eq .Values.controller.enabled true) (eq .Values.ingressGrpc.enabled true) (eq .Values.ingressGrpc.tls.enabled true) -}}
+{{- if and (not (empty .Values.ingressGrpc.tls.crt)) (not (empty .Values.ingressGrpc.tls.key)) }}
 apiVersion: v1
 kind: Secret
 metadata:
