--- a/charts/lighthouse/templates/agent/configmap.yaml
+++ b/charts/lighthouse/templates/agent/configmap.yaml
@@ -10,7 +10,7 @@ metadata:
   labels:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
-  SERVER_URL: {{ include "lighthouse.controller.grpc.url" . | toString | quote }}
+  GRPC_SERVER: {{ include "lighthouse.controller.grpc.url" . | toString | quote }}
   PORT: {{ .Values.agent.service.port | toString | quote }}
   AGENT_SECRET_NAME: {{ include "lighthouse.agent.auth.secret.name" . | toString | quote }}
   RESOURCE_NAMESPACE: {{ include "lighthouse.namespace" . | toString | quote }}
