--- a/charts/lighthouse/templates/agent/secret.yaml
+++ b/charts/lighthouse/templates/agent/secret.yaml
@@ -1,7 +1,7 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq .Values.agent.enabled true) -}}
+{{- if and (eq .Values.agent.enabled true) (not (empty (include "lighthouse.controller.ingressGrpc.tls.ca" .))) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,11 +10,7 @@ metadata:
   labels:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
-  {{- if not (empty (include "lighthouse.controller.ingress.tls.ca" .)) }}
-  TLS_SERVER_CUSTOM_CA: {{ include "lighthouse.controller.ingress.tls.ca" . | b64enc | quote }}
-  {{- else }}
-  TLS_SERVER_CUSTOM_CA: ""
-  {{- end }}
+  TLS_SERVER_CUSTOM_CA: {{ include "lighthouse.controller.ingressGrpc.tls.ca" . | b64enc | quote }}
 ---
 {{- end }}
 {{- if and (eq .Values.agent.enabled true) (not (empty .Values.auth.token)) -}}
