--- a/charts/lighthouse/templates/controller/clusterrole.yaml
+++ b/charts/lighthouse/templates/controller/clusterrole.yaml
@@ -1,7 +1,7 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if eq (include "lighthouse.controller.enabled" .) "true" -}}
+{{- if eq .Values.controller.enabled true -}}
 apiVersion: {{ include "rbac.apiVersion" . }}
 kind: ClusterRole
 metadata:
