--- a/charts/lighthouse/templates/controller/ingress.yaml
+++ b/charts/lighthouse/templates/controller/ingress.yaml
@@ -1,49 +1,47 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingress.enabled true) -}}
-apiVersion: {{ .Values.server.ingress.apiVersion | default (include "ingress.apiVersion" .) }}
+{{- if and (eq .Values.controller.enabled true) (eq .Values.ingress.enabled true) -}}
+apiVersion: {{ include "ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: {{ include "lighthouse.controller.ingress.name" . }}
   namespace: {{ include "lighthouse.namespace" . }}
   labels:
     {{- include "lighthouse.controller.labels" . | nindent 4 }}
-  {{- if or (.Values.server.ingress.annotations) (.Values.global.ingress.annotations) }}
+  {{- if .Values.ingress.annotations }}
   annotations:
-     {{- $annotations := .Values.server.ingress.annotations | default .Values.global.ingress.annotations }}
+     {{- $annotations := .Values.ingress.annotations }}
      {{- range $key, $value := $annotations }}
      {{ $key }}: {{ $value | quote }}
      {{- end }}
   {{- end }}
 spec:
   {{- if (eq "true" (include "ingress.supportsIngressClassname" .)) }}
-    {{- if or (.Values.server.ingress.ingressClassName) (.Values.global.ingress.ingressClassName) }}
-  ingressClassName: {{ .Values.server.ingress.ingressClassName | default .Values.global.ingress.ingressClassName | toString | quote }}
+    {{- if .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.ingressClassName | toString | quote }}
     {{- end }}
   {{- end }}
   rules:
-      {{- if .Values.server.ingress.hostname }}
-    - host: {{ .Values.server.ingress.hostname }}
+      {{- if .Values.ingress.hostname }}
+    - host: {{ .Values.ingress.hostname }}
       http:
         paths:
-          {{- if (eq .Values.server.ingress.createCombinedIngress true) }}
-          - path: {{ .Values.server.webapp.ingress.path }}
+          - path: /
               {{- if eq "true" (include "ingress.supportsPathType" .) }}
-            pathType: {{ .Values.server.webapp.ingress.pathType | default .Values.global.ingress.pathType }}
+            pathType: {{ .Values.ingress.pathType }}
               {{- end }}
-            backend: {{- include "ingress.backend" (dict "ingressApiVersion" (.Values.server.webapp.ingress.apiVersion | default (include "ingress.apiVersion" .)) "serviceName" (include "lighthouse.webapp.name" .) "servicePort" .Values.server.webapp.service.port . $)  | nindent 14 }}
-          {{- end }}
-          - path: {{ .Values.server.ingress.path }}
+            backend: {{- include "ingress.backend" (dict "ingressApiVersion" (include "ingress.apiVersion" .) "serviceName" (include "lighthouse.webapp.name" .) "servicePort" .Values.controller.webapp.service.port . $)  | nindent 14 }}
+          - path: /api
               {{- if eq "true" (include "ingress.supportsPathType" .) }}
-            pathType: {{ .Values.server.ingress.pathType | default .Values.global.ingress.pathType }}
+            pathType: {{ .Values.ingress.pathType }}
               {{- end }}
-            backend: {{- include "ingress.backend" (dict "ingressApiVersion" (.Values.server.ingress.apiVersion | default (include "ingress.apiVersion" .)) "serviceName" (include "lighthouse.controller.name" .) "servicePort" .Values.server.service.port . $)  | nindent 14 }}
+            backend: {{- include "ingress.backend" (dict "ingressApiVersion" (include "ingress.apiVersion" .) "serviceName" (include "lighthouse.controller.name" .) "servicePort" .Values.controller.service.port . $)  | nindent 14 }}
       {{- end }}
-    {{- if eq .Values.server.ingress.tls.enabled true }}
+    {{- if eq .Values.ingress.tls.enabled true }}
   tls:
     - hosts:
-        - {{ .Values.server.ingress.hostname }}
+        - {{ .Values.ingress.hostname }}
       secretName: {{ include "lighthouse.controller.ingress.tls.secretName" . }}
     {{- end }}
 {{- end }}
