--- a/charts/lighthouse/templates/controller/configmap.yaml
+++ b/charts/lighthouse/templates/controller/configmap.yaml
@@ -10,11 +10,10 @@ metadata:
   labels:
     {{- include "lighthouse.controller.labels" . | nindent 4 }}
 data:
-  GRPC_SERVER: {{ include "lighthouse.controller.grpc.url" . | toString | quote }}
+  CONTROLLER_GRPC_SERVER_HOST: {{ include "lighthouse.controller.grpc.url" . | toString | quote }}
   PORT: {{ .Values.agent.service.port | toString | quote }}
   AGENT_SECRET_NAME: {{ include "lighthouse.agent.auth.secret.name" . | toString | quote }}
   RESOURCE_NAMESPACE: {{ include "lighthouse.namespace" . | toString | quote }}
-  AUTH_ENABLED: {{ include "auth.enabled" . | toString | quote }}
   DB_NAME: {{ include "lighthouse.db.mongo.databaseName" . | toString | quote }}
   ACCESS_TOKEN_EXPIRY: {{ "15m" | toString | quote }}
   REFRESH_TOKEN_EXPIRY: {{ "24h" | toString | quote }}
