--- a/charts/lighthouse/templates/agent/secret.yaml
+++ b/charts/lighthouse/templates/agent/secret.yaml
@@ -1,7 +1,7 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq .Values.agent.enabled true) (not (empty (include "lighthouse.controller.ingressGrpc.tls.ca" .))) -}}
+{{- if and (eq .Values.agent.enabled true) (not (empty .Values.config.controller.grpc.tls.ca)) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,7 +10,7 @@ metadata:
   labels:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
-  TLS_SERVER_CUSTOM_CA: {{ include "lighthouse.controller.ingressGrpc.tls.ca" . | b64enc | quote }}
+  TLS_SERVER_CUSTOM_CA: {{ .Values.config.controller.grpc.tls.ca | b64enc | quote }}
 ---
 {{- end }}
 {{- if and (eq .Values.agent.enabled true) (not (empty .Values.auth.token)) -}}
@@ -23,5 +23,5 @@ metadata:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
   AUTH_TOKEN: {{ .Values.auth.token | toString | b64enc | quote}}
-  WORKER_GROUP: {{ include "lighthouse.agent.wrokerGroup" . | toString | b64enc | quote }}
+  AGENT_GROUP: {{ include "lighthouse.agent.wrokerGroup" . | toString | b64enc | quote }}
 {{- end }}
