--- a/charts/lighthouse/templates/db/mongo/statefulset.yaml
+++ b/charts/lighthouse/templates/db/mongo/statefulset.yaml
@@ -1,7 +1,7 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq .Values.controller.enabled true) (eq .Values.db.mongo.create true) -}}
+{{- if and (eq .Values.controller.enabled true) (eq .Values.db.mongo.internal.enabled true) (eq .Values.db.mongo.external.enabled false) -}}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -39,9 +39,9 @@ spec:
         namespace: {{ include "lighthouse.namespace" . }}
         labels:
           {{- include "lighthouse.db.mongo.labels" . | nindent 10 }}
-        {{- if .Values.db.mongo.persistence.annotations }}
+        {{- if .Values.db.mongo.internal.persistence.annotations }}
         annotations:
-         {{- $annotations := .Values.db.mongo.persistence.annotations }}
+         {{- $annotations := .Values.db.mongo.internal.persistence.annotations }}
          {{- range $key, $value := $annotations }}
          {{ $key }}: {{ $value | quote }}
          {{- end }}
@@ -52,7 +52,7 @@ spec:
         resources:
           requests:
             storage: {{ include "lighthouse.db.mongo.persistence.size" . | quote }}
-        {{- if not (empty .Values.db.mongo.persistence.storageClassName) }}
-        storageClassName: {{ .Values.db.mongo.persistence.storageClassName | quote }}
+        {{- if not (empty .Values.db.mongo.internal.persistence.storageClassName) }}
+        storageClassName: {{ .Values.db.mongo.internal.persistence.storageClassName | quote }}
         {{- end }}
 {{- end }}
