--- a/charts/lighthouse/templates/controller/rolebinding.yaml
+++ b/charts/lighthouse/templates/controller/rolebinding.yaml
@@ -3,17 +3,18 @@
 */}}
 {{- if eq .Values.controller.enabled true -}}
 apiVersion: {{ include "rbac.apiVersion" . }}
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: {{ include "lighthouse.controller.clusterrolebinding.name" . }}
+  name:  {{ include "lighthouse.controller.role.name" . }}
+  namespace: {{ include "lighthouse.namespace" . }}
   labels:
     {{- include "lighthouse.controller.labels" . | nindent 4 }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ include "lighthouse.controller.clusterrole.name" . }}
 subjects:
   - kind: ServiceAccount
     name: {{ include "lighthouse.controller.serviceAccount.name" . }}
     namespace: {{ include "lighthouse.namespace" . }}
+roleRef:
+  kind: Role
+  name: {{ include "lighthouse.controller.role.name" . }}
+  apiGroup: rbac.authorization.k8s.io
 {{- end }}
