--- a/charts/lighthouse/templates/controller/role.yaml
+++ b/charts/lighthouse/templates/controller/role.yaml
@@ -20,6 +20,9 @@ rules:
     resources: ["persistentvolumeclaims"]
     verbs: ["create", "list", "update", "watch", "delete", "get"]
   - apiGroups: ["apps"]
+    resources: ["deployments"]
+    verbs: ["list", "watch", "delete", "get"]
+  - apiGroups: ["apps"]
     resources: ["statefulsets"]
     verbs: ["list", "watch", "delete", "get"]
 {{- end }}
