Agent config updated

--- a/charts/lighthouse/templates/agent/configmap.yaml
+++ b/charts/lighthouse/templates/agent/configmap.yaml
@@ -10,7 +10,7 @@ metadata:
   labels:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
-  CONTROLLER_GRPC_SERVER_HOST: {{ include "lighthouse.controller.grpc.url" . | toString | quote }}
+  CONTROLLER_GRPC_SERVER_HOST: {{ include "agent.lighthouse.controller.grpc.url" . | toString | quote }}
   AGENT_SECRET_NAME: {{ include "lighthouse.agent.auth.secret.name" . | toString | quote }}
   RESOURCE_NAMESPACE: {{ include "lighthouse.namespace" . | toString | quote }}
   RUN_MODE: {{ .Values.global.runMode | toString | quote }}
